--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,8 +13,9 @@ layout: default
   </div>
 
   <div style="text-align: center">
-    <a href="https://twitter.com/share" class="twitter-share-button"
-       data-show-count="false">Tweet</a>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a>
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <script src="https://apis.google.com/js/platform.js" async defer></script>
+      <div style="text-align: right" class="g-plus" data-action="share" data-annotation="none"></div>
   </div>
 </article>
