--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,5 +17,8 @@ layout: default
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
       <script src="https://apis.google.com/js/platform.js" async defer></script>
       <div style="text-align: right" class="g-plus" data-action="share" data-annotation="none"></div>
+  <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+
   </div>
+
 </article>
