_posts: New post on x86 ORC unwinder

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -271,3 +271,9 @@ $padding-x-small: 3%;
   margin: 0 auto;
   display: block;
 }
+
+.large-center-image {
+  width: 150%;
+  margin: 0 -25%;
+  text-align: center;
+}
