head.html: Add twitter cards and og:image tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,16 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
+  <meta property="og:image" content="{{ site.url }}/assets/front.jpg" />
+
+  <!-- Twitter summary cards -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@fleming_matt" />
+  <meta name="twitter:creator" content="@fleming_matt" />
+
+  <meta name="twitter:title" content="{{ page.title }}" />
+  <meta name="twitter:image" content="{{ site.url }}/assets/front.jpg" />
+
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
